# reverie

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benchmarks/: README.md  jana-example-corpus.txt  jana-workload-corpus.txt
benchmarks/jana/: bit_reversal_n8.ja  bit_reversal_n8_reverse.ja  factor_840_reverse.ja  fib_loop_n1000.ja  fib_loop_n1000_reverse.ja  matrix_transpose_3x3.ja  matrix_transpose_3x3_reverse.ja  matrixmult_v1_reverse.ja  perm_to_code_reverse.ja  procedure_call_n1000.ja  procedure_call_n1000_reverse.ja  rle_compression_n8.ja  (+9 more)
crates/reverie-cli/: Cargo.toml
crates/reverie-cli/src/: main.rs
crates/reverie-cli/tests/: cli.rs
crates/reverie-interp/: Cargo.toml
crates/reverie-interp/benches/: execution.rs
crates/reverie-interp/src/: compiled.rs  lib.rs
crates/reverie-tui/: Cargo.toml
crates/reverie-tui/src/: lib.rs
docs/: architecture.md  arrays.md  cli.md  diagnostics.md  evaluation.md  grammar.md  injectivization.md  janus-audit.md  janus-compatibility.md  language.md  model-import.md  performance.md  refinements.md  reversibility.md  roadmap.md  scrubber.md  units.md  v1-acceptance.md
examples/: README.md  alias_rejection.rev  array.rev  array_oob.rev  array_units.rev  assert.rev  assert_failure.rev  bit_reversal.rev  bool_flags.rev  bool_toggle.rev  delocal_assertion_failure.rev  element_args.rev  fib.rev  globals.rev  if_assertion_failure.rev  increment.rev  injectivized_max.rev  invertible_coupling.rev  io.rev  janus_automata.rev  janus_factor.rev  janus_operators.rev  janus_optional_control.rev  janus_procedure_syntax.rev  janus_root.rev  janus_sort.rev  janus_stack_reverse.rev  janus_turing.rev  local_shadow_rejection.rev  loop_assertion_failure.rev  matrix_transpose.rev  mnist_identify.rev  mnist_mlp_witness.rev  mnist_reversible_step.rev  mnist_witness_tape.rev  mnist_witness_tape_loop.rev  naive_max_no_witness.rev  negation.rev  perm_to_code.rev  proc.rev  (+22 more)
scripts/: audit_jana_examples.py  bench_jana_vs_reverie.py  check_benchmark_artifact.py  check_benchmark_docs.py  check_ci_workflow.py  check_criterion_docs.py  check_evaluation_corpus.py  check_explain_json.py  check_invertible_coupling.py  check_jana_audit.py  check_janus_feature_audit.py  check_materialized_sources.py  check_ml_north_star.py  check_mnist_ml_profile.py  check_model_import_docs.py  check_q31_inference.py  check_q31_mlp_witness.py  check_reversible_inference_trace.py  check_reversible_preprocess.py  check_triangular_residual.py  export_q31_linear_model.py  export_q31_mlp_vars.py  extract_torch_linear_state_dict.py  render_mnist_reversal_gif.py  render_mnist_training_reversal_gif.py  render_scrubber_gif.py  run_mnist_ml_audit_pipeline.py  summarize_janus_performance.py  summarize_mnist_ml_profile.py  verify_janus_performance.py  verify_model_capsule.py  visualize_mnist_reverie.py
(+16 files in other folders)
