[workspace]
members = [
    "crates/reverie-cli",
    "crates/reverie-core",
    "crates/reverie-interp",
    "crates/reverie-syntax",
    "crates/reverie-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ariadne = "0.5.1"
assert_cmd = "2.2.2"
chumsky = "0.9.3"
clap = { version = "4.5.26", features = ["derive"] }
criterion = "0.5.1"
crossterm = "0.28.1"
insta = "1.47.2"
logos = "0.15.1"
predicates = "3.1.4"
proptest = "1.11.0"
ratatui = "0.29.0"
thiserror = "2.0.11"

reverie-cli = { path = "crates/reverie-cli" }
reverie-core = { path = "crates/reverie-core" }
reverie-interp = { path = "crates/reverie-interp" }
reverie-syntax = { path = "crates/reverie-syntax" }
reverie-tui = { path = "crates/reverie-tui" }
