[package]
name = "reverie-interp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
reverie-core.workspace = true
reverie-syntax.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "execution"
harness = false
