[package]
name = "reverie-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
crossterm.workspace = true
ratatui.workspace = true
reverie-interp.workspace = true
thiserror.workspace = true

[dev-dependencies]
reverie-syntax.workspace = true
